--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,9 @@
             "delay" : 0
         },
         /* 模块配置 */
-        "modules" : {},
+        "modules" : {
+            "Push" : {}
+        },
         /* 应用发布信息 */
         "distribute" : {
             /* android打包配置 */
@@ -47,7 +49,9 @@
             },
             /* SDK配置 */
             "sdkConfigs" : {
-                "push" : {},
+                "push" : {
+                    "unipush" : {}
+                },
                 "ad" : {}
             },
             "icons" : {
